--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<!--<header id="header">
+					<header id="header">
 						<span class="avatar"><img src="images/Profile.jpg" alt="" /></span>
 						<h1><strong>Mike Malone</strong>
 						<p>Cartography Portfolio</h1>
 						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/dikembe3000" class="icon style2 fa-github"><span class="label">500px</span></a></li>
+							<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>-->
+							<!--<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>-->
+							<!--<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
+							<!--<li><a href="https://github.com/dikembe3000" class="icon style2 fa-github"><span --> class="label">500px</span></a></li>
 							<li><a href="mailto:mlm122@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
-					</header>-->
+					</header>
 
 				<!-- Main -->
 					<section id="main">
