--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<p>Cartography Portfolio</h1>
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>-->
-							<li><a href=""https://www.facebook.com/rsrc.php/v3i01Q4/yE/l/en_US/jqGhv3juZFT.js"" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/maloneinhumboldt" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							<!--<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
 							<!--<li><a href="https://github.com/dikembe3000" class="icon style2 fa-github"><span class="label">500px</span></a></li>--> 
 							<li><a href="mailto:mlm122@humboldt.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
