--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Mike Malone Homepage, HSU ERE Major, Minor GSP. All rights reserved. Design: Mike Malone | Humboldt State University </p>
+						<p>Mike Malone Homepage. All rights reserved, 2019. Design: Mike Malone | ERE Major, Minor GSP | Humboldt State University </p>
 					</footer>
 
 			</div>
