--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 						<!-- Thumbnails -->
 							<section class="thumbnails">
-								<!--<div>
-									<a href="images/police_map.png">
-										<img src="images/police_map.png" alt="" />
-										<h3>Police Shooting In United States</h3>
+								--<div>
+									<a href="images/thomasfirefcwrefc.gif">
+										<img src="images/thomasfirefcwrefc.gif" alt="" />
+										<h3>Thomas Fire False Color Composite</h3>
 									</a>
 									<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
@@ -43,7 +43,7 @@
 										<img src="images/Carpet.png" alt="" />
 										<h3>PDX Carpet</h3>
 									</a>
-								</div>-->
+								</div>
 								<!--<div>
 									<a href="images/States_map.png">
 										<img src="images/States_map.png" alt="" />
