--- a/index.html
+++ b/index.html
@@ -30,18 +30,10 @@
 
 						<!-- Thumbnails -->
 							<section class="thumbnails">
-								--<div>
+								<div>
 									<a href="images/thomasfirefcwrefc.gif">
 										<img src="images/thomasfirefcwrefc.gif" alt="" />
 										<h3>Thomas Fire False Color Composite</h3>
-									</a>
-									<a href="images/Oilspills_map.png">
-										<img src="images/Oilspills_map.png" alt="" />
-										<h3>Crude Oil Spills</h3>
-									</a>
-									<a href="images/Carpet.png">
-										<img src="images/Carpet.png" alt="" />
-										<h3>PDX Carpet</h3>
 									</a>
 								</div>
 								<!--<div>
