--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mike Malone Homepage</title> 
+		<title>Mike Malone Homepage</title>  
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,9 @@
 					<header id="header">
 						<span class="avatar"><img src="images/Profile.jpg" alt="" /></span>
 						<h1><strong>Mike Malone</strong>
-						<p>Cartography Portfolio</h1>
+						<p> Humboldt State University</h1>
+						<p> Environmental Resources Engineering Major</h1>
+				                <p> Geospatial Minor</h1>
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>-->
 							<li><a href="https://www.facebook.com/maloneinhumboldt" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
